# DashWidgets-PyQt

./: DashWidgets.spec  README.md  main.py  pyproject.toml
assets/icons/: FluentCompose12Regular.avif  FluentGridKanban20Filled.avif  FluentSettings16Regular.avif
